crates/plotnik-tests/tests/04-emit/bytecode/binding/missing_unknown_token.txt
Q = (MISSING "zzzznotoken") @m
------------------ DIAGNOSTICS -------------------
error: `zzzznotoken` is not a valid node kind
 --> query.ptk:1:15
  |
1 | Q = (MISSING "zzzznotoken") @m
  |               ^^^^^^^^^^^
